OTROS/robotObstacles_JavaCC/source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import java.awt.Point;
import java.io.*;
import java.util.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.Random;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;


        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();

//

public Hashtable<String, String> variables = new Hashtable<String, String>();
public String v;
public String i;

// public ArrayList<String> para = new ArrayList<String>();
public String n;

public Hashtable<String, ArrayList<String>> funciones = new Hashtable<String, ArrayList<String>>();
public String f;

// Sale un error raro que le mandamos a Diego. No afecta pero igual se imprime.
  final public void instruccion() throws ParseException {
        int numero;
        Token x = null;
        String n;
        int numDegree;
        int i = 0; // Para los ciclos
        salida = new String();
        boolean estaP = true;
        boolean estaV = true;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MOVE:
      jj_consume_token(MOVE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                         numero = Integer.parseInt(x.image);
                                                                 world.moveForward(numero); salida = "Command: MOVE";
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); System.out.println(estaV); if (estaV == false) {
                                                {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                                else{n = variables.get(token.image);
                                                         numero = Integer.parseInt(n);
                                                         world.moveForward(numero); salida="Command: MOVE";}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                   else{n = variables.get(token.image);
                                           numero = Integer.parseInt(n);
                                               world.moveForward(numero); salida="Command: MOVE";}
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case DROP:
      jj_consume_token(DROP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                         numero = Integer.parseInt(x.image);
                                                 world.putChips(numero); salida="Command: DROP";
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                                {if (true) throw new Error("Variable no declarada anteriormente");}}
                                                else{n = variables.get(token.image);
                                                         numero = Integer.parseInt(n);
                                                         world.putChips(numero); salida="Command: DROP";}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                   else{n = variables.get(token.image);
                                                   numero = Integer.parseInt(n);
                                                   world.putChips(numero); salida="Command: DROP";}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case FREE:
      jj_consume_token(FREE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                         numero = Integer.parseInt(x.image);
                                                 world.putBalloons(numero); salida="Command: FREE";
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                                 {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                                 else{n = variables.get(token.image);
                                                      numero = Integer.parseInt(n);
                                                  world.putBalloons(numero); salida="Command: FREE";}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                        {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                        else{n = variables.get(token.image);
                                                                 numero = Integer.parseInt(n);
                                                                 world.putBalloons(numero); salida="Command: FREE";}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case PICK:
      jj_consume_token(PICK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
                     world.pickupChip(); salida="Command: PICK";
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                                {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                                else{world.pickupChip(); salida="Command: PICK";}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                   else{world.pickupChip(); salida="Command: PICK";}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case POP:
      jj_consume_token(POP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                         numero = Integer.parseInt(x.image);
                                                 world.popBalloons(numero);  salida="Command: POP";
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                            {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                                else {n = variables.get(token.image);
                                                      numero = Integer.parseInt(n);
                                                      world.popBalloons(numero); salida="Command: POP";}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                        {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                        else {n = variables.get(token.image);
                                                          numero = Integer.parseInt(n);
                                                                  world.popBalloons(numero); salida="Command: POP";}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case ROTATE:
      jj_consume_token(ROTATE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                           Random random = new Random();
                                                   if (random.nextInt(2) == 0){numero = Integer.parseInt(x.image);
                                                                                                   numDegree = (int) numero / 90;
                                                                                                   while (i < numDegree) {i += 1; world.turnRight(); salida = "Command: ROTATE";}}
                                               else{numero = Integer.parseInt(x.image);
                                                    numDegree = (int) numero / 90;
                                                        while (i < (4 - numDegree)) {i += 1; world.turnRight(); salida = "Command: ROTATE";}}
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                                            {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                                            else {Random random1 = new Random();
                                                    if (random1.nextInt(2) == 0){n = variables.get(token.image);
                                                                                                 numero = Integer.parseInt(n);
                                                                                                         numDegree = (int) numero / 90;
                                                                                                         while (i < numDegree) {i += 1; world.turnRight(); salida = "Command: ROTATE";}}
                                                    else{n = variables.get(token.image);
                                                         numero = Integer.parseInt(n);
                                                         numDegree = (int) numero / 90;
                                                             while (i < (4 - numDegree)) {i += 1; world.turnRight(); salida = "Command: ROTATE";}}}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                                   else {Random random2 = new Random();
                                                                   if (random2.nextInt(2) == 0){n = variables.get(token.image);
                                                                                                                     numero = Integer.parseInt(n);
                                                                                                                                 numDegree = (int) numero / 90;
                                                                                                                                 while (i < numDegree) {i += 1; world.turnRight(); salida = "Command: ROTATE";}}
                                                                                  else{n = variables.get(token.image);
                                                                                       numero = Integer.parseInt(n);
                                                                                       numDegree = (int) numero / 90;
                                                                                       while (i < (4 - numDegree)) {i += 1; world.turnRight(); salida = "Command: ROTATE";}}}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case TURNRIGHT:
      jj_consume_token(TURNRIGHT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                               numero = Integer.parseInt(x.image);
                           numDegree = (int) numero / 90;
                         while (i < numDegree){i += 1; world.turnRight(); salida = "Command: RIGHT";}
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                            {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                            else {n = variables.get(token.image);
                                                  numero = Integer.parseInt(n);
                              numDegree = (int) numero / 90;
                              while (i < numDegree){i += 1; world.turnRight(); salida = "Command: RIGHT";}}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                   else {n = variables.get(token.image);
                                                     numero = Integer.parseInt(n);
                                 numDegree = (int) numero / 90;
                                 while (i < numDegree){i += 1; world.turnRight(); salida = "Command: RIGHT";}}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case TURNLEFT:
      jj_consume_token(TURNLEFT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        x = jj_consume_token(INT);
                             numero = Integer.parseInt(x.image);
                         numDegree = (int) numero / 90;
                         while (i < (4 - numDegree)){i += 1; world.turnRight(); salida = "Command: LEFT";}
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                    estaV = variables.containsKey(token.image); if (estaV == false) {
                                            {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
                                            else {n = variables.get(token.image);
                                                  numero = Integer.parseInt(n);
                              numDegree = (int) numero / 90;
                              while (i < (4 - numDegree)){i += 1; world.turnRight(); salida = "Command: LEFT";}}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
                                                   else {n = variables.get(token.image);
                                                         numero = Integer.parseInt(n);
                                 numDegree = (int) numero / 90;
                                 while (i < (4 - numDegree)){i += 1; world.turnRight(); salida = "Command: LEFT";}}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case LOOK:
      jj_consume_token(LOOK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
        jj_consume_token(30);
                 if (world.facingEast()) {while (i < 3 ){i += 1; world.turnRight(); salida = "Command: LOOK N";}
                } else if (world.facingSouth()) {while (i < 2 ){i += 1; world.turnRight(); salida = "Command: LOOK N";}
                } else if (world.facingWest()) {while (i < 1 ){i += 1; world.turnRight(); salida = "Command: LOOK N";}
                }
        break;
      case 31:
        jj_consume_token(31);
                               if (world.facingNorth()) {while (i < 3 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  } else if (world.facingEast()) {while (i < 2 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  } else if (world.facingSouth()) {while (i < 1 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  }
        break;
      case 32:
        jj_consume_token(32);
                               if (world.facingSouth()) {while (i < 3 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  } else if (world.facingWest()) {while (i < 2 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  } else if (world.facingNorth()) {while (i < 1 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  }
        break;
      case 33:
        jj_consume_token(33);
                               if (world.facingWest()) {while (i < 3 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  } else if (world.facingNorth()) {while (i < 2 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  } else if (world.facingEast()) {while (i < 1 ){i += 1; world.turnRight(); salida = "Command: LOOK W";}
                  }
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case CHECK:
      jj_consume_token(CHECK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
        jj_consume_token(34);
        break;
      case 35:
        jj_consume_token(35);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        break;
      case NOMB:
        jj_consume_token(NOMB);
                                            estaV = variables.containsKey(token.image); if (estaV == false) {
                                                                                {if (true) throw new Error("Variable no declarada anteriormente:" + "'" + token.image + "'");}}
        break;
      case 28:
        jj_consume_token(28);
        jj_consume_token(NOMB);
                                       estaP = variables.containsKey(token.image); if (estaP == false) {
                                                   {if (true) throw new Error("Par\u00e1metro no declarado anteriormente:" + "'" + token.image + "'");}}
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(29);
      break;
    case NOP:
      jj_consume_token(NOP);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public boolean f(StringBuffer sistema) throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOVE:
      case DROP:
      case FREE:
      case PICK:
      case POP:
      case TURNRIGHT:
      case TURNLEFT:
      case LOOK:
      case CHECK:
      case ROTATE:
      case NOP:
      case PIF:
      case DEFINE:
      case REP:
      case TO:
      case NOMB:
      case 38:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOVE:
      case DROP:
      case FREE:
      case PICK:
      case POP:
      case TURNRIGHT:
      case TURNLEFT:
      case LOOK:
      case CHECK:
      case ROTATE:
      case NOP:
        instruccion();
        break;
      case PIF:
        ifs();
        break;
      case REP:
        repeat();
        break;
      case 38:
        block();
        break;
      case DEFINE:
        def();
        break;
      case TO:
        to();
        break;
      case NOMB:
        funct();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                                                                          {if (true) return false;}
    throw new Error("Missing return statement in function");
  }

  final public Token variable() throws ParseException {
    jj_consume_token(NOMB);
   {if (true) return token;}
    throw new Error("Missing return statement in function");
  }
